<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    tools:context=".activities.LoginActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:src="@drawable/logo" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonShowNewRecords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:background="@color/colorTextHint"
            android:text="@string/text_NewRecords" />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonShowCurrentRecords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:background="@color/colorTextHint"
            android:text="@string/text_CurrentRecords" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonShowRecords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:background="@color/colorTextHint"
            android:text="@string/text_ShowRecords" />
    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v4.widget.NestedScrollView>
